Deleted old files. Modiefied sections of the index in the css for better visual representation, added logo to the footer, fixed icons in the navbar, moved logo so it does not overlap. Other small changes.

--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,4 @@
 /*------------------------------------------------------------------
-[Master Stylesheet]
-
-Project:	Lattes - One page multi purpose page
-Version:	1.0
-Last change:	17/08/2015 [...]
-Designed by:	MOOZ Themes / www.MOOZthemes.com
-Primary use:	One page
-
 [Table of contents]
 
 1. General
@@ -81,7 +73,8 @@ a, a:hover, a:focus, a:active, a.active {
 }
 
 section {
-    padding: 70px 0;
+    padding: 60px 0;
+
 }
 
 /*--------------------
@@ -96,6 +89,7 @@ section {
 	color: #fff;
 	font-family: "Montserrat",sans-serif;
     padding: 0px;
+
 }
 .navbar-default .navbar-brand:hover,.navbar-default .navbar-brand:focus,.navbar-default .navbar-brand:active,.navbar-default .navbar-brand.active {
 	color: #fec503
@@ -117,7 +111,7 @@ section {
 	font-family: "Roboto",sans-serif;
 	text-transform: uppercase;
 	font-weight: 400;
-	letter-spacing: 1px;
+	letter-spacing: 0.1px;
 	color:#fff
 }
 .navbar-default .nav li a:hover,.navbar-default .nav li a:focus {
@@ -163,6 +157,8 @@ section {
 	}
 }
 
+
+
 /*--------------------
 3. Header
 --------------------*/
@@ -187,8 +183,8 @@ header .intro-text {
 
 @media (min-width: 768px) {
 	header .intro-text {
-	    padding-top: 300px;
-	    padding-bottom: 200px;
+	    padding-top: 200px;
+	    padding-bottom: 150px;
 	}
 }
 
@@ -206,7 +202,7 @@ header .intro-text .intro-lead-in {
 	    font-style: italic;
 	    font-size: 40px;
 	    line-height: 40px;
-	    margin-bottom: 25px;
+	    margin-bottom: 15px;
 	}
 }
 
@@ -233,7 +229,7 @@ header .intro-text .intro-heading {
 --------------------*/
 
 .section-title h2 {
-    font-size: 34px;
+    font-size: 35px;
     text-transform: uppercase;
 }
 
@@ -241,7 +237,7 @@ header .intro-text .intro-heading {
     font-size: 15px;
     font-weight: 300;
     line-height: 25px;
-    margin: 20px 100px 60px 100px;
+    margin: 16px 100px 20px 100px;
 }
 
 /*--------------------
@@ -255,88 +251,21 @@ header .intro-text .intro-heading {
     color: #3A3A3A;
     letter-spacing: 2px;
     margin-bottom: 20px;
+    display: inline-block;
 }
 
 .mz-module-about p {
-font-size: 14px;
+    font-size: 14px;
     font-weight: 300;
     line-height: 22px;
     color: #969696;
 }
 
-.ot-circle {
-height: 95px;
-    width: 95px;
-    text-align: center;
-    line-height: 98px;
-    color: #3E3E3E;
-    /* border: 3px solid #000; */
-    border-radius: 100px;
-    /* background-color: #E8E8E8; */
-    margin: 0 2px 4px;
-    font-size: 31px;
-}
-
-/*--------------------
-4.2. Skills
---------------------*/
-
-.skills-text h2 {
-	margin: 0 0 30px;
-}
-
-.skillbar-item {
-    margin-bottom: 30px;	
-}
-
-.skillbar {
-    position: relative;
-    display: block;
-    width: 100%;
-}
-
-.skillbar-score {
-background-color: #dfdfdf;
-    padding: 7px;
-    text-align: center;
-    color: #000000;
-    font-weight: 300;
-    float: right;
-    width: 50px;
-    height: 40px;
+.mz-module-about .fa-certificate {
+    margin-right: 3px;
+    font-size: 70%;
+    display: inline-block;
     vertical-align: middle;
- }
-
-.skillbar-score .score {
-    font-size: 20px;
-}
-
-.skillbar-score .percent {
-    font-size: 13px;
-}
-
-.skillbar-bar {
-display: block;
-    background-color: #dfdfdf;
-    height: 3px;
-    width: 100%;
-}
-
-.skillbar h3 {
-	font-weight: 600;
-    font-size: 13px;
-    text-transform: uppercase;
-    color: #3A3A3A;
-    letter-spacing: 2px;	
-margin: 0;
-    padding: 12px 0;
-}
-
-.skillbar-percent {
-    color: #fff;
-    background-color: #000000;
-    float: left;
-    height: 3px;
 }
 
 /*--------------------
@@ -499,13 +428,14 @@ figure.effect-bubba:hover p {
 
 .counter-item h2 {
     color: #fff;
-    font-size: 60px;
+    font-size: 61px;
     margin: 0;
+    padding-bottom: 6px;
 }
 
 .counter-item h6 {
     color: #fff;
-    font-size: 19px;
+    font-size: 18px;
     margin: 0;	
 }
 
@@ -524,55 +454,17 @@ figure.effect-bubba:hover p {
 }
 
 /*--------------------
-4.6. Team
---------------------*/
-
-.team-item {
-    text-align: center;
-    background-color: #fff;
-}
-
-.team-item h3 {
-    font-size: 16px;
-    font-weight: 500;
-}
-
-.team-item .team-location {
-    color: #C5C5C5;
-    font-size: 13px;
-    margin-bottom: 20px;    
-}
-
-.team-item .team-location {
-    color: #C5C5C5;
-    font-size: 12px;
-    margin-bottom: 20px;    
-}
-
-.team-item .team-position {
-    color: #000;
-    font-size: 12px;
-}
-
-.team-item p {
-    font-size: 13px;
-    font-weight: 300;
-    color: #9C9C9C;
-    padding: 5px 10px 20px 10px;
-}
-
-/*--------------------
 4.7. Contacts
 --------------------*/
 
-section#contact form {
+section#kontaktai form {
     margin-top: 15px;
 }
-section#contact.form-group {
+section#kontaktai.form-group {
 margin-bottom: 25px;
 }
 
-section#contact .form-group input, section#contact .form-group textarea {
+section#kontaktai .form-group input, section#kontaktai .form-group textarea {
     padding: 15px;
     border: 1px solid #BBBBBB;
     border-radius: 0;
@@ -581,20 +473,20 @@ section#contact .form-group input, section#contact .form-group textarea {
     font-size: 13px;
 }
 
-.contact h3 {
+.kontaktai h3 {
     margin-bottom: 30px;
 }
 
-.contact p {
+.kontaktai p {
     font-size: 13px;
 }
 
-.contact .day {
+.kontaktai .day {
     display: inline-block;
     width: 80px;
 }
 
-.contact i {
+.kontaktai i {
     margin-right: 5px;
 }
 
@@ -603,7 +495,7 @@ section#contact .form-group input, section#contact .form-group textarea {
 --------------------*/
 
 footer {
-    padding: 30px;
+    padding: 9px 30px 3px 30px;
     background-color: #000;    
 }
 
@@ -625,6 +517,10 @@ footer p a span {
     font-size: 10px;
     letter-spacing: 1px;
     font-weight: 700;
+}
+
+footer img {
+    margin: 0px;
 }
 
 /*--------------------
@@ -724,6 +620,7 @@ font-size: 11px;
     bottom: 40px;
     right: 50px;
 }
+
 #back-top a {
     width: 60px;
     height: 60px;
@@ -738,7 +635,10 @@ font-size: 11px;
     -webkit-transition: 1s;
     -moz-transition: 1s;
     transition: 1s;
+    background-color: rgba(0, 0, 0, 0.5);
+    border-radius: 25px;
 }
+
 #back-top a:hover {
     background: #fed136;
 }
